--- a/client/vercel.json
+++ b/client/vercel.json
@@ -6,6 +6,10 @@
   "framework": "vite",
   "rewrites": [
     {
+      "source": "/api/(.*)",
+      "destination": "http://65.0.135.77/api/$1"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
@@ -22,4 +26,3 @@
     }
   ]
 }
-
